--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <input type='button' id='reset' value='' />
 </body>
 
-<script src="script.js"></script>
+<script src="game.js"></script>
 
 </html>
