--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 </head>
 
 <body>
+  
   <h2>TIC TAC TOE</h2>
-  <table id='board'></table>
+
+  <div class="square">
+    <table id='board'></table>
+  </div>
+
   <div id='status'></div>
   <input type='button' id='reset' value='' />
+
 </body>
 
 <script src="game.js"></script>
